RESOLVED FIXED45945
[DRT/Chromium] Fix a WebSettings handling bug
https://bugs.webkit.org/show_bug.cgi?id=45945
Summary [DRT/Chromium] Fix a WebSettings handling bug
Kent Tamura
Reported 2010-09-16 21:38:30 PDT
[DRT/Chromium] Fix a WebSettings handling bug
Attachments
Patch (33.39 KB, patch)
2010-09-16 21:44 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2010-09-16 21:44:54 PDT
Adam Barth
Comment 2 2010-09-17 01:18:28 PDT
Comment on attachment 67882 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=67882&action=prettypatch Nice. Thanks. > LayoutTests/platform/chromium/drt_expectations.txt:90 > +// The first didFinishDocumentLoadForFrame line is for the previous test document. This seems like an unrelated change.
Kent Tamura
Comment 3 2010-09-19 05:56:01 PDT
Comment on attachment 67882 [details] Patch Clearing flags on attachment: 67882 Committed r67809: <http://trac.webkit.org/changeset/67809>
Kent Tamura
Comment 4 2010-09-19 05:56:10 PDT
All reviewed patches have been landed. Closing bug.
Mihai Parparita
Comment 5 2010-09-19 14:20:44 PDT
*** Bug 46055 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.